<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        android:layout_marginTop="73dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="51dp"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/etUserName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="51dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnNewUser"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp" />

    <Button
        android:id="@+id/btnNewUser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/btnFpassword"
        android:layout_marginTop="95dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="97dp"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        app:layout_constraintLeft_toRightOf="@+id/btnlogin" />

    <Button
        android:id="@+id/btnFpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="119dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnlogin"
        android:layout_marginLeft="31dp" />

    <TextView
        android:id="@+id/SecureMessagingApp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Secure Messaging App"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="16dp" />

</android.support.constraint.ConstraintLayout>