<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samad.securemessagingapplayout.SendToContacts"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_marginStart="32dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/selection"
        android:layout_marginLeft="32dp" />


    <TextView
        android:id="@+id/Contact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_1"
        android:layout_marginStart="37dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="100dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="37dp" />

    <TextView
        android:id="@+id/Contact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_2"
        android:layout_marginStart="37dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/Contact3"
        android:layout_marginTop="61dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="62dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Contact1"
        android:layout_marginLeft="37dp" />

    <TextView
        android:id="@+id/Contact3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_3"
        android:layout_marginStart="37dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/btnwithpasscode"
        android:layout_marginTop="179dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="178dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Contacts"
        android:layout_marginLeft="37dp" />

    <TextView
        android:id="@+id/Contact4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_4"
        android:layout_marginStart="37dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/btnwithpasscode"
        android:layout_marginTop="112dp"
        app:layout_constraintTop_toBottomOf="@+id/Contact2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="111dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="37dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/checkBox6"
        android:layout_marginTop="85dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox6"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/checkBox7"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox7" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/checkBox8"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox8" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7"
        android:layout_marginRight="72dp" />

    <TextView
        android:id="@+id/Contacts"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:textSize="17sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="Contacts"
        android:layout_marginStart="37dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/Contact1"
        android:layout_marginTop="44dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="37dp" />



    <TextView
        android:id="@+id/selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*must select atleast one"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnwithpasscode"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:elevation="0dp"
        android:text="with passcode"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/selection"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btnunsecured"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="unsecured"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/selection"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="17dp"
        android:layout_marginRight="16dp" />
</android.support.constraint.ConstraintLayout>
